# ai-edge-inference

./: ArcFace_USAGE_GUIDE.md  CLOUD_EDGE_STORAGE_STRATEGY.md  Cargo.toml  MOBILE_ALBUM_SYSTEM_USAGE.md  MPS_INFERENCE_DEMO.md  README.md  build.rs  requirements.txt  simple_mps_inference.py  yolo_mps_inference.py
config/: link.ld
docs/series/: part10_heterogeneous_scheduling.md  part1_system_overview.md  part2_boot_and_memory.md  part3_gic_multicore.md  part4_fdt_hal.md  part5_i2c_driver.md  part6_can_driver.md  part7_mipi_csi_driver.md  part8_rknn_ffi.md  part9_yolov8_optimization.md
src/: lib.rs  main.rs
src/arch/aarch64/: boot.s
src/drivers/: can_driver_rk.rs  i2c_embedded_hal.rs  mipi_csi_driver.rs  mod.rs  uart.rs
src/hal/: fdt_parser.rs  gic500.rs  mod.rs
src/kernel/: mod.rs  multicore.rs
src/kernel/sched/: hmp_scheduler.rs  mod.rs  npu_support.rs
src/mm/: paging.rs
src/npu/: arcface_app.rs  cloud_storage_sync.rs  dbscan_clustering.rs  dedup_manager.rs  hybrid_search.rs  incremental_clustering.rs  metadata_index_sync.rs  mod.rs  offline_geocoding.rs  postprocess_nms.rs  preprocess_neon.rs  rknn_binding_sys.rs  vector_index_hnsw.rs  yolov8_infer_app.rs  yolov8_quantized.rs
src/system/: integration.rs  mod.rs  scenarios.rs
