[package]
name = "starryos-rk3588"
version = "0.1.0"
edition = "2021"

[dependencies]
fdt-parser = "0.5"
volatile = "0.4"
spin = "0.9"
num_cpus = "1.16"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "starryos"
path = "src/main.rs"
